# persistent-context

./: .gitignore  ARCHITECTURE_DEEP_DIVE.md  Problem_statement.md  README.md
Anvil-P-E-main/bench-p02-context/: generator.py  harness.py  report_50_seeds.json  run.py
Anvil-P-E-main/bench-p02-context/adapters/: myteam.py
scalartemp-main/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
scalartemp-main/adapters/: myteam.py
scalartemp-main/engine/: __init__.py  causal_graph.py  cli.py  context_compiler.py  incident_fingerprinter.py  memory_substrate.py  performance_monitor.py  remediation_store.py  rules_engine.py  schema.py  telemetry_buffer.py
scalartemp_main/: __init__.py
scalartemp_main/adapters/: __init__.py  myteam.py
scripts/: stress_test_engine.py
